--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,7 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node,jetbrains+all,visualstudiocode
 
+
+# Eigen toevoegingen
+
+*csv
