--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "clean": "rimraf docs/.observablehq/cache",
     "build:mem": "NODE_OPTIONS=--max_old_space_size=4096 && npm run build",
     "build": "rimraf dist && observable build",
-    "dev:mem": "NODE_OPTIONS=--max_old_space_size=4096 && npm run dev",
+    "dev:mem": "NODE_OPTIONS=--max_old_space_size=4096 npm run dev",
     "dev": "observable preview",
     "deploy": "observable deploy",
     "observable": "observable"
