change titles graphs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: 20
       - run: npm install
       - run: node docs/data/allFilteredData.js
-      - run: npm run build:mem
+      - run: npm run build:mem:linux
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
